--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -49,15 +49,15 @@
 
     <div class="container">
         <div class="row row-content">
-            <div class="col-12 col-sm-4 col-md-3">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="col col-sm col-md">
-                <div class="media">
+                <div class="col-12 col-sm-4 col-md-3">
+                    <h3>Our Lipsmacking Culinary Creations</h3>
+                </div>
+                <div class="col col-sm col-md">
+                <div class="d-flex">
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge text-bg-danger">HOT</span> <span class="badge rounded-pill text-bg-secondary">4.99</span> </h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
                             cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -82,10 +82,10 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <div class="media">
+                <div class="d-flex">
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/alberto.png" alt="Alberto Somayya">
-                    <div class="media-body">
+                    <div class="flex-grow-1 ms-3"">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
