Switched to bootstrap 4.0, Cards and Tables

--- a/conFusion/aboutus.html
+++ b/conFusion/aboutus.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button> 
            <a class="navbar-brand" href="./index.html"><img src="./img/logo.png" height="30" width="41"></a>
