--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -19,7 +19,7 @@
 
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
            <a class="navbar-brand" href="#"><img src="./img/logo.png" height="30" width="41"> </a>
@@ -36,34 +36,38 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm 6">
+                <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a class="btn-sm btn-warning btn-block text-center" role="button" href="#Reservation">Reserve Table</a>
+                </div>  
             </div>
         </div>
     </header>
 
     <div class="container">
         <div class="row row-content">
-                <div class="col-12 col-sm-4 col-md-3">
-                    <h3>Our Lipsmacking Culinary Creations</h3>
-                </div>
-                <div class="col col-sm col-md">
-                <div class="d-flex">
+            <div class="col-12 col-sm-4 col-md-3">
+                <h3>Our Lipsmacking Culinary Creations</h3>
+            </div>
+            <div class="col col-sm col-md">
+                <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza <span class="badge text-bg-danger">HOT</span> <span class="badge rounded-pill text-bg-secondary">4.99</span> </h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">4.99</span> </h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
                             cherry tomatoes, Vidalia onion, Guntur chillies and
                             Buffalo Paneer.</p>
                     </div>
                 </div>  
+            </div>
         </div>
 
 
@@ -72,8 +76,14 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                        src="./img/buffet.png" alt="Buffet">
+                </div>
             </div>
         </div>
 
@@ -82,10 +92,10 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <div class="d-flex">
+                <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/alberto.png" alt="Alberto Somayya">
-                    <div class="flex-grow-1 ms-3"">
+                    <div class="media-body"">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
@@ -97,6 +107,50 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content">
+            <div class="col col-12 col-sm-8 offset-sm-2">
+                <div class="card">
+                    <h3 class="card-hader bg-warning">Reserve a Table</h3>
+                    <div class="card-content">
+                        <form>
+                            <div class="form-group row">
+                                <label for="guestsnum" class="col-md-2 col-form-label ml-2"  id="Reservation"><strong>Number of Guests</strong></label>
+                                <div class="col-md-6">
+                                    <input type="radio" id="1guest" name="guestsnum" value="1">
+                                    <label for="1guest" class="radio-inline mr-3">1</label>
+                                    <input type="radio" id="2guest" name="guestsnum" value="2">
+                                    <label for="1guest" class="radio-inline mr-3">2</label>
+                                    <input type="radio" id="3guest" name="guestsnum" value="3">
+                                    <label for="1guest" class="radio-inline mr-3">3</label>
+                                    <input type="radio" id="4guest" name="guestsnum" value="4">
+                                    <label for="1guest" class="radio-inline mr-3">4</label>
+                                    <input type="radio" id="5guest" name="guestsnum" value="5">
+                                    <label for="1guest" class="radio-inline mr-3">5</label>
+                                    <input type="radio" id="6guest" name="guestsnum" value="6">
+                                    <label for="1guest" class="radio-inline mr-3">6</label>
+                                </div>
+                           </div>
+                           <div class="form-group row">
+                                <label for="datetime" class="col-md-2 col-form-label ml-2"><strong>Date and Time</strong></label>
+                                <div class="col-11 col-md-3 ml-2">
+                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-11 col-md-3 ml-2">
+                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-10">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <footer class="footer">
