--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -72,6 +72,67 @@
             </div>            
         </div>
     </nav>
+    <div id="ReservationModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal Content -->
+            <div class="modal-content">
+               <div class="modal-header">
+                <h3 class="modal-title">Reserve a Table</h3>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+               </div>
+               <div class="modal-content"></div>
+               <form>
+                <div class="form-group row">
+                    <label for="guestsnum" class="col-md-2 col-form-label ml-2"  id="Reservation"><strong>Number of Guests</strong></label>
+                    <div class="col-md-6">
+                        <input type="radio" id="1guest" name="guestsnum" value="1">
+                        <label for="1guest" class="radio-inline mr-3">1</label>
+                        <input type="radio" id="2guest" name="guestsnum" value="2">
+                        <label for="1guest" class="radio-inline mr-3">2</label>
+                        <input type="radio" id="3guest" name="guestsnum" value="3">
+                        <label for="1guest" class="radio-inline mr-3">3</label>
+                        <input type="radio" id="4guest" name="guestsnum" value="4">
+                        <label for="1guest" class="radio-inline mr-3">4</label>
+                        <input type="radio" id="5guest" name="guestsnum" value="5">
+                        <label for="1guest" class="radio-inline mr-3">5</label>
+                        <input type="radio" id="6guest" name="guestsnum" value="6">
+                        <label for="1guest" class="radio-inline mr-3">6</label>
+                    </div>
+               </div>
+               <div class="form-group row">
+                    <label for="section" class="col-md-2 col-form-label ml-2"><strong>Section</strong></label>
+                    <div class="col-11 col-md-3 ml-2">
+                        <div class="btn-group btn-group-toggle" btn-toggle="buttons">
+                            <label class="btn btn-success active">
+                                <input type="radio" name="section" id="nonsmoking" autocomplete="off" checked>Non-Smoking
+                            </label>
+                            <label class="btn btn-danger">
+                                <input type="radio" name="section" id="smoking" autocomplete="off">Smoking
+                            </label>
+                        </div>
+                    </div>
+               </div>
+               <div class="form-group row">
+                    <label for="datetime" class="col-md-2 col-form-label ml-2"><strong>Date and Time</strong></label>
+                    <div class="col-11 col-md-3 ml-2">
+                        <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                    </div>
+                    <div class="col-11 col-md-3 ml-2">
+                        <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="offset-md-2 col-2 col-md-1">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button> 
+                    </div>
+                    <div class="offset-1 col-2 col-md-1">
+                        <button type="submit" class="btn btn-primary">Reserve</button>
+                    </div>
+                </div>
+            </form>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -84,8 +145,7 @@
                 </div>
                 <div class="col-12 col-sm align-self-center">
                     <a class="btn-sm btn-warning btn-block text-center" role="button" 
-                    data-toggle="tooltip" data-html="true"title="Or Call us at  <br><strong>+852 12345678</strong>"
-                    data-placement="bottom" href="#Reservation">Reserve Table</a>
+                    data-toggle="modal" data-target="#ReservationModal">Reserve Table</a>
                 </div>  
             </div>
         </div>
@@ -289,12 +349,6 @@
       <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
       <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
       <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-      <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-      </script>
-
 </body>
 
 </html>
