--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -84,30 +84,37 @@
                <form>
                 <div class="form-group row">
                     <label for="guestsnum" class="col-md-2 col-form-label ml-2"  id="Reservation"><strong>Number of Guests</strong></label>
-                    <div class="col-md-6">
-                        <input type="radio" id="1guest" name="guestsnum" value="1">
-                        <label for="1guest" class="radio-inline mr-3">1</label>
-                        <input type="radio" id="2guest" name="guestsnum" value="2">
-                        <label for="1guest" class="radio-inline mr-3">2</label>
-                        <input type="radio" id="3guest" name="guestsnum" value="3">
-                        <label for="1guest" class="radio-inline mr-3">3</label>
-                        <input type="radio" id="4guest" name="guestsnum" value="4">
-                        <label for="1guest" class="radio-inline mr-3">4</label>
-                        <input type="radio" id="5guest" name="guestsnum" value="5">
-                        <label for="1guest" class="radio-inline mr-3">5</label>
-                        <input type="radio" id="6guest" name="guestsnum" value="6">
-                        <label for="1guest" class="radio-inline mr-3">6</label>
+                    <div class="col-md-6"><div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="numGuests" id="one_guest_radio" value="one" checked="checked">
+                        <label class="form-check-label" for="one_guest_radio">1</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="numGuests" id="two_guest_radio" value="two">
+                        <label class="form-check-label" for="two_guest_radio">2</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="numGuests" id="three_guest_radio" value="three">
+                        <label class="form-check-label" for="three_guest_radio">3</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="numGuests" id="four_guest_radio" value="four">
+                        <label class="form-check-label" for="four_guest_radio">4</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="numGuests" id="six_guest_radio" value="six">
+                        <label class="form-check-label" for="six_guest_radio">6</label>
+                      </div>
                     </div>
                </div>
                <div class="form-group row">
                     <label for="section" class="col-md-2 col-form-label ml-2"><strong>Section</strong></label>
                     <div class="col-11 col-md-3 ml-2">
-                        <div class="btn-group btn-group-toggle" btn-toggle="buttons">
+                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
                             <label class="btn btn-success active">
-                                <input type="radio" name="section" id="nonsmoking" autocomplete="off" checked>Non-Smoking
+                                <input type="radio" name="section" value="nonsmoking" id="nonsmoking" autocomplete="off" checked>Non-Smoking
                             </label>
                             <label class="btn btn-danger">
-                                <input type="radio" name="section" id="smoking" autocomplete="off">Smoking
+                                <input type="radio" name="section" value="smoking" id="smoking" autocomplete="off">Smoking
                             </label>
                         </div>
                     </div>
@@ -254,49 +261,6 @@
                             whos-who in the culinary world, he specializes in
                             creating mouthwatering Indo-Italian fusion experiences.
                             </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row row-content">
-            <div class="col col-12 col-sm-8 offset-sm-2">
-                <div class="card">
-                    <h3 class="card-hader bg-warning">Reserve a Table</h3>
-                    <div class="card-content">
-                        <form>
-                            <div class="form-group row">
-                                <label for="guestsnum" class="col-md-2 col-form-label ml-2"  id="Reservation"><strong>Number of Guests</strong></label>
-                                <div class="col-md-6">
-                                    <input type="radio" id="1guest" name="guestsnum" value="1">
-                                    <label for="1guest" class="radio-inline mr-3">1</label>
-                                    <input type="radio" id="2guest" name="guestsnum" value="2">
-                                    <label for="1guest" class="radio-inline mr-3">2</label>
-                                    <input type="radio" id="3guest" name="guestsnum" value="3">
-                                    <label for="1guest" class="radio-inline mr-3">3</label>
-                                    <input type="radio" id="4guest" name="guestsnum" value="4">
-                                    <label for="1guest" class="radio-inline mr-3">4</label>
-                                    <input type="radio" id="5guest" name="guestsnum" value="5">
-                                    <label for="1guest" class="radio-inline mr-3">5</label>
-                                    <input type="radio" id="6guest" name="guestsnum" value="6">
-                                    <label for="1guest" class="radio-inline mr-3">6</label>
-                                </div>
-                           </div>
-                           <div class="form-group row">
-                                <label for="datetime" class="col-md-2 col-form-label ml-2"><strong>Date and Time</strong></label>
-                                <div class="col-11 col-md-3 ml-2">
-                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
-                                </div>
-                                <div class="col-11 col-md-3 ml-2">
-                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="offset-md-2 col-md-10">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
