--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -66,8 +66,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
-                        <span class="fa fa-sign-in"></span> Login</a>
+                    <a id="showLogin"><span class="fa fa-sign-in"></span> Login</a>
                 </span> 
             </div>            
         </div>
@@ -152,7 +151,7 @@
                 </div>
                 <div class="col-12 col-sm align-self-center">
                     <a class="btn-sm btn-warning btn-block text-center" role="button" 
-                    data-toggle="modal" data-target="#ReservationModal">Reserve Table</a>
+                    id="showReservation">Reserve Table</a>
                 </div>  
             </div>
         </div>
@@ -329,6 +328,12 @@
                     $("#carouselButton").children("span").removeClass("fa-play");
                     $("#carouselButton").children("span").addClass("fa-pause");
                 }
+            });
+            $("#showLogin").click(function() {
+                $("#loginModal").modal("toggle");
+            });
+            $("#showReservation").click(function() {
+                $("#ReservationModal").modal("toggle");
             });
         });      
     </script>
